president file updated

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <img src="img/logo.png" alt="" class="message-image">
         </div>
         <div class="message-item president">
-            <img src="img/president.jpg" alt="" class="message-image">
+            <img src="img/president.png" alt="" class="message-image">
         </div>
         <div class="message-container">
             <h2 class="message-title">みやうち塾&nbsp;<span>塾長からのメッセージ</span></h2>
