form updated, shops updated, css updated

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                         </div>
                     </div>
                     <div class="card-right">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.4983098967414!2d139.57919167534513!3d35.615440072608536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f133ca373161%3A0x8b35efebdf171bf5!2z44CSMjE0LTAwMjEg56We5aWI5bed55yM5bed5bSO5biC5aSa5pGp5Yy65a6_5rKz5Y6f77yU5LiB55uu77yS77yV4oiS77yT77yXIOOCuOODp-OCpOOCpuOCqOOCueODiOilv-WxsQ!5e0!3m2!1sja!2sjp!4v1740592484008!5m2!1sja!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.4983098967414!2d139.57919167534513!3d35.615440072608536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f133ca373161%3A0x8b35efebdf171bf5!2z44CSMjE0LTAwMjEg56We5aWI5bed55yM5bed5bSO5biC5aSa5pGp5Yy65a6_5rKz5Y6f77yU5LiB55uu77yS77yV4oiS77yT77yXIOOCuOODp-OCpOOCpuOCqOOCueODiOilv-WxsQ!5e0!3m2!1sja!2sjp!4v1740592484008!5m2!1sja!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </li>           
                 <li class="card">
@@ -543,6 +543,114 @@
                     </div>
                     <div class="card-right">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.1190754893523!2d139.615112475342!3d35.55076127262966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185f57a85809a3%3A0x20777ae2ee51dc04!2z44CSMjIzLTAwNjYg56We5aWI5bed55yM5qiq5rWc5biC5riv5YyX5Yy66auY55Sw6KW_77yS5LiB55uu77yR77yV4oiS77yUIOesrO-8k-WGheeUsOODk-ODqw!5e0!3m2!1sja!2sjp!4v1740592530414!5m2!1sja!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>   
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾南加瀬教室</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">212-0055</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">川崎市幸区南加瀬1-17-21<br>夢見ヶ崎店舗1階</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.3365278177557!2d139.6658765!3d35.5453901!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185fbd0e8471e7%3A0x41363253401ddba0!2z44G_44KE44GG44Gh5aG-IOWNl-WKoOeArOaVmeWupA!5e0!3m2!1sen!2sjp!4v1741132899818!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>   
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾新丸子教室</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">211-0004</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">川崎市中原区新丸子東2-897-11<br>ラポール新丸子211号室</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.001808797192!2d139.66005247644455!3d35.5783471726207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f557a6def3b1%3A0xe16cc687a4c33168!2z44G_44KE44GG44Gh5aG-IOaWsOS4uOWtkOaVmeWupA!5e0!3m2!1sen!2sjp!4v1741132949209!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>   
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾新百合ヶ丘教室</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">206-0823</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">東京都稲城市平尾2-19-1<br>SICビル102</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.848055548294!2d139.49737127644576!3d35.60681447261133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018fb9f60cad89d%3A0x76d22ca9f5b7c3f!2z44G_44KE44GG44Gh5aG-IOaWsOeZvuWQiOODtuS4mOaVmeWupA!5e0!3m2!1sen!2sjp!4v1741132967625!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>   
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾自由が丘教室(吉田塾)</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">152-0035</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">東京都目黒区自由が丘1-16-10<br>市川ビル2階</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3243.6798700551226!2d139.66745777644573!3d35.610962572610056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f4e01ca736d3%3A0x7eda040523b3283!2s1-ch%C5%8Dme-16-10%20Jiy%C5%ABgaoka%2C%20Meguro%20City%2C%20Tokyo%20152-0035!5e0!3m2!1sen!2sjp!4v1741133028480!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>   
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾川崎西口教室</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">212-0021</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">川崎市幸区都町1-4</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d811.6709607418426!2d139.69058777584345!3d35.53680979387969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60186082b2a64353%3A0x621b86a032faa3c5!2s1%20Miyakoch%C5%8D%2C%20Saiwai%20Ward%2C%20Kawasaki%2C%20Kanagawa%20212-0021!5e0!3m2!1sen!2sjp!4v1741133199097!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>   
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾鹿島田教室</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">212-0058</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">川崎市幸区鹿島田1-5-22<br>コンフォート新川崎2階</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.074858248727!2d139.66979567644347!3d35.55185337262926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185fc73368f151%3A0x1790105ab9df263e!2z44CSMjEyLTAwNTggS2FuYWdhd2EsIEthd2FzYWtpLCBTYWl3YWkgV2FyZCwgS2FzaGltYWRhLCAxLWNoxY1tZeKIkjXiiJIyMiDjgrPjg7Pjg5Xjgqnjg7zjg4jmlrDlt53ltI4!5e0!3m2!1sen!2sjp!4v1741133230047!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </li>   
                 <li class="logo-box">
@@ -756,6 +864,10 @@
                             <input type="checkbox" name="school" value="みやうち塾川崎西口教室">
                             <span>みやうち塾川崎西口教室</span>
                         </label>
+                        <label class="checkbox-item">
+                            <input type="checkbox" name="school" value="みやうち塾鹿島田教室">
+                            <span>みやうち塾鹿島田教室</span>
+                        </label>
                     </div>
                 </div>
 
@@ -802,8 +914,8 @@
             }).then(() => {
                 formMessage.textContent = '送信が完了しました。';
                 form.reset();
-                // ページトップへスクロール
-                window.scrollTo({ top: 0, behavior: 'smooth' });
+                // サンクスページへジャンプ
+                window.location.href = 'https://ssgform.com/thank_you';
             }).catch(() => {
                 formMessage.textContent = '送信に失敗しました。もう一度お試しください。';
                 formMessage.style.color = 'red';
