サンクスページの追加と Google タグマネージャーの追加

--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 
 <head>
     <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-56MFJHXP');</script>
-    <!-- End Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-NF264MXM');</script>
+        <!-- End Google Tag Manager -->
 
 
     <meta charset="UTF-8">
@@ -24,9 +21,9 @@
 
 <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-56MFJHXP" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF264MXM"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->    
 
     <header class="header">
         <div class="header-inner">
@@ -915,7 +912,7 @@
                 formMessage.textContent = '送信が完了しました。';
                 form.reset();
                 // サンクスページへジャンプ
-                window.location.href = 'https://lp001.miyauchijuku.com/thanks';
+                window.location.href = 'thanks';
             }).catch(() => {
                 formMessage.textContent = '送信に失敗しました。もう一度お試しください。';
                 formMessage.style.color = 'red';
