form target updated

--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
                 formMessage.textContent = '送信が完了しました。';
                 form.reset();
                 // サンクスページへジャンプ
-                window.location.href = 'https://ssgform.com/thank_you';
+                window.location.href = 'https://lp001.miyauchijuku.com/thanks';
             }).catch(() => {
                 formMessage.textContent = '送信に失敗しました。もう一度お試しください。';
                 formMessage.style.color = 'red';
