塾教室追加

--- a/index.html
+++ b/index.html
@@ -647,7 +647,43 @@
                         </div>
                     </div>
                     <div class="card-right">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.074858248727!2d139.66979567644347!3d35.55185337262926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185fc73368f151%3A0x1790105ab9df263e!2z44CSMjEyLTAwNTggS2FuYWdhd2EsIEthd2FzYWtpLCBTYWl3YWkgV2FyZCwgS2FzaGltYWRhLCAxLWNoxY1tZeKIkjXiiJIyMiDjgrPjg7Pjg5Xjgqnjg7zjg4jmlrDlt53ltI4!5e0!3m2!1sen!2sjp!4v1741133230047!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.07502830173!2d139.66978727644354!3d35.551849172629296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185fc73368f151%3A0x626bcf0cefa4306d!2z44CSMjEyLTAwNTggS2FuYWdhd2EsIEthd2FzYWtpLCBTYWl3YWkgV2FyZCwgS2FzaGltYWRhLCAxLWNoxY1tZeKIkjXiiJIyMiDjgrPjg7Pjg5Xjgqnjg7zjg4jmlrDlt53ltI4gMumajg!5e0!3m2!1sen!2sjp!4v1744020056361!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>   
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾井田教室</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">211-0035</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">川崎市中原区井田2-34-3<br>第2三和ビル201</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.6414093734793!2d139.63841127644397!3d35.5625573726258!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f587f6b90007%3A0x1f1d0ffbcc23699c!2z44CSMjExLTAwMzUgS2FuYWdhd2EsIEthd2FzYWtpLCBOYWthaGFyYSBXYXJkLCBJZGEsIDItY2jFjW1l4oiSMzTiiJIyIOS4ieWSjOawtOeUoyAyMDE!5e0!3m2!1sen!2sjp!4v1744019979528!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>   
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾二子新地教室</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">213-0004</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">川崎市高津区諏訪2丁目10-28<br>DOLCE VITA1階</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3244.003007068409!2d139.62374198879738!3d35.60299240199618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f58e2d105fe3%3A0xf52d1f559c6355d7!2z77yk77yv77ys77yj77yl77y277yp77y077yh!5e0!3m2!1sen!2sjp!4v1744019946941!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </li>   
                 <li class="logo-box">
