--- a/index.html
+++ b/index.html
@@ -685,7 +685,43 @@
                     <div class="card-right">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3244.003007068409!2d139.62374198879738!3d35.60299240199618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f58e2d105fe3%3A0xf52d1f559c6355d7!2z77yk77yv77ys77yj77yl77y277yp77y077yh!5e0!3m2!1sen!2sjp!4v1744019946941!5m2!1sen!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                </li>   
+                </li>
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾溝の口教室</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">213-0011</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">神奈川県川崎市高津区久本3丁目9-6<br>4階事務所</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3244.2386173881528!2d139.6191!3d35.59718009999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f42fd2a30089%3A0x8d42ba7459d5dc4e!2z44CSMjEzLTAwMTEg56We5aWI5bed55yM5bed5bSO5biC6auY5rSl5Yy65LmF5pys77yT5LiB55uu77yZ4oiS77yWIOODquODs-OCr-OCueODk-ODqw!5e0!3m2!1sja!2sjp!4v1745327886553!5m2!1sja!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾稲田堤教室</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">214-0001</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">神奈川県川崎市多摩区菅1丁目14-10<br>シャトレー星川1階</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.832287601808!2d139.5382057758952!3d35.63186083268429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f089d4b8800b%3A0x9189ae803de551ae!2z44CSMjE0LTAwMDEg56We5aWI5bed55yM5bed5bSO5biC5aSa5pGp5Yy66I-F77yR5LiB55uu77yR77yU4oiS77yR77yQIOOCt-ODo-ODiOODrOODvOaYn-W3nQ!5e0!3m2!1sja!2sjp!4v1745327992437!5m2!1sja!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>
                 <li class="logo-box">
                     <div class="logo-image">
                         <img src="./img/logo-wide.png" alt="">
@@ -900,6 +936,22 @@
                         <label class="checkbox-item">
                             <input type="checkbox" name="school" value="みやうち塾鹿島田教室">
                             <span>みやうち塾鹿島田教室</span>
+                        </label>
+                        <label class="checkbox-item">
+                            <input type="checkbox" name="school" value="みやうち塾井田教室">
+                            <span>みやうち塾井田教室</span>
+                        </label>
+                        <label class="checkbox-item">
+                            <input type="checkbox" name="school" value="みやうち塾二子新地教室">
+                            <span>みやうち塾二子新地教室</span>
+                        </label>
+                        <label class="checkbox-item">
+                            <input type="checkbox" name="school" value="みやうち塾稲田堤教室">
+                            <span>みやうち塾稲田堤教室</span>
+                        </label>
+                        <label class="checkbox-item">
+                            <input type="checkbox" name="school" value="みやうち塾溝の口教室">
+                            <span>みやうち塾溝の口教室</span>
                         </label>
                     </div>
                 </div>
