新しい塾教室「みやうち塾日吉教室」の情報を追加

--- a/index.html
+++ b/index.html
@@ -722,11 +722,29 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.832287601808!2d139.5382057758952!3d35.63186083268429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f089d4b8800b%3A0x9189ae803de551ae!2z44CSMjE0LTAwMDEg56We5aWI5bed55yM5bed5bSO5biC5aSa5pGp5Yy66I-F77yR5LiB55uu77yR77yU4oiS77yR77yQIOOCt-ODo-ODiOODrOODvOaYn-W3nQ!5e0!3m2!1sja!2sjp!4v1745327992437!5m2!1sja!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </li>
+                <li class="card">
+                    <div class="card-left">
+                        <h3 class="title-text">みやうち塾日吉教室</h3>
+                        <div class="table">
+                            <div class="table-inner">
+                                <p class="table-head">〒</p>
+                                <p class="table-detail">223-0051</p>
+                            </div>
+                            <div class="table-inner">
+                                <p class="table-head">add.</p>
+                                <p class="">神奈川県横浜市港北区箕輪町1-17-5<br>日幸マンション3階</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-right">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d25970.818656632113!2d139.6547224!3d35.5449997!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185f74193033bf%3A0x7ea593de76dd34a6!2z44CSMjIzLTAwNTEg56We5aWI5bed55yM5qiq5rWc5biC5riv5YyX5Yy6566V6Lyq55S677yR5LiB55uu77yR77yX4oiS77yVIOaXpeW5uOODnuODs-OCt-ODp-ODsw!5e0!3m2!1sja!2sjp!4v1747283037224!5m2!1sja!2sjp" width="135" height="135" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </li>
                 <li class="logo-box">
                     <div class="logo-image">
                         <img src="./img/logo-wide.png" alt="">
                     </div>
-                </li>        
+                </li>   
             </ul>
         </div>
     </section>
