--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
                                 <p class="">川崎市中原区宮内3丁目17-14&nbsp;2階</p>
                                 <br>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">044-766-8886</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
@@ -334,10 +334,10 @@
                                 <p class="table-head">add.</p>
                                 <p class="">川崎市中原区宮内2丁目11-7<br>ひだまりビル2階</p>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">044-766-8886</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
@@ -356,10 +356,10 @@
                                 <p class="table-head">add.</p>
                                 <p class="">川崎市中原区下小田中5丁目2-12<br>成本ビル2階</p>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">044-741-1231</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
@@ -378,10 +378,10 @@
                                 <p class="table-head">add.</p>
                                 <p class="">川崎市中原区下新城2-1-25<br>ヒロヤマビル2-A</p>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">070-4017-1249</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
@@ -400,10 +400,10 @@
                                 <p class="table-head">add.</p>
                                 <p class="">川崎市中原区上小田中6-21-6<br>エフビル5階</p>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">044-766-8886</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
@@ -422,10 +422,10 @@
                                 <p class="table-head">add.</p>
                                 <p class="">川崎市高津区千年新町11-2<br>リブレス武蔵新城1階&nbsp;1号室</p>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">044-766-8886</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
@@ -444,10 +444,10 @@
                                 <p class="table-head">add.</p>
                                 <p class="">川崎市中原区下沼部1751<br>グリーンスクエア1階</p>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">044-766-8886</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
@@ -466,10 +466,10 @@
                                 <p class="table-head">add.</p>
                                 <p class="">川崎市宮前区白幡台1-11-1<br>白旗台住宅15棟102号室</p>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">070-4017-1249</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
@@ -488,10 +488,10 @@
                                 <p class="table-head">add.</p>
                                 <p class="">川崎市多摩区三田1丁目12-5<br>三田コーポ137号室</p>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">070-4017-1249</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
@@ -510,10 +510,10 @@
                                 <p class="table-head">add.</p>
                                 <p class="">川崎市多摩区宿河原4丁目25-37<br>ジョイウエスト西山B1F</p>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">070-4017-1249</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
@@ -532,10 +532,10 @@
                                 <p class="table-head">add.</p>
                                 <p class="">横浜市港北区高田西2-15-4<br>第三内田ビル3階</p>
                             </div>
-                            <div class="table-inner">
+                            <!-- <div class="table-inner">
                                 <p class="table-head">tel.</p>
                                 <p class="">070-4017-1249</p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-right">
